<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_Index_Group" Id="{27cb6dd4-5cca-0679-19de-f973d88d9d51}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_Index_Group :
STRUCT
  nXAxisIdx     : UDINT := 1;
  nYAxisIdx     : UDINT := 2;
  nZAxisIdx     : UDINT := 3;

  nQ1AxisIdx    : UDINT;
  nQ2AxisIdx    : UDINT;
  nQ3AxisIdx    : UDINT;
  nQ4AxisIdx    : UDINT;
  nQ5AxisIdx    : UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>