<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="e_Ctrl_NciCommand" Id="{f8fe1c84-1c2c-06b2-36ff-df9d6cd4c956}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'to_string'}
TYPE e_Ctrl_NciCommand :
(
  NO_NCI            := -10,
  NO_AXIS_GROUP     := -2,
  NO_AXIS_INDEX     := -1,
  NO_INIT,
  INIT,
  IDLE,
  RESET,
  LOAD_PROG,
  FEED_TABLE,
  BUILD_GROUP,
  CLEAR_GROUP,

  START         := 10,
  STOP,
  STO_STOP,
  RESTART_STEP_ON,

  M_FUNC_QUIT   := 20,

  READ_R_PARA   := 30,
  WRITE_R_PARA  := 40,

  CMD_BUSY      := 100,
  CMD_DONE      := 1000,
  CMD_ERROR     := 9000
)DINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>